--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -61,8 +61,10 @@
 }
 
 .bg-gradient {
- background:  linear-gradient(45deg,#f472b6, #fff, red);
+ background:  linear-gradient(45deg,#f472b6, pink, red);
 }
+
+
 .bg-cover {
 
   background-size: 500%;
